# MCP_setup

./: .dockerignore  Dockerfile  README.md  claude_desktop_config.json  docker-compose.yml  echo_server.py  main.py  mcp_documentation.txt  open_mcp_inspector.bat  pyproject.toml  requirements.txt  security_mcp_server.py  temp_mcp_sequence.txt  test_echo_mcp.ps1  test_echo_mcp.sh  test_requests.txt  test_security_mcp.ps1
.cursor/: mcp.json
.cursor/rules/: autonomous-rule-creation.mdc  coding-standards.mdc  python-file-organization.mdc  rule-visibility.mdc  rules-location.mdc
