[project]
name = "blackarch-security-mcp"
version = "1.0.0"
description = "BlackArch Security Tools MCP Server for educational penetration testing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.15.0",
    "fastmcp>=0.1.0",
    "requests>=2.31.0",
    "httpx>=0.28.1",
    "colorama>=0.4.6",
    "cryptography>=41.0.0",
]
authors = [
    {name = "Security Tools", email = "security@example.com"},
]
keywords = ["security", "pentesting", "mcp", "blackarch", "cybersecurity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/blackarch-security-mcp/server"
Documentation = "https://github.com/blackarch-security-mcp/server/blob/main/README.md"
Repository = "https://github.com/blackarch-security-mcp/server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
